Site width overflow fix

--- a/assets/css/partials/_base.scss
+++ b/assets/css/partials/_base.scss
@@ -3,9 +3,11 @@ $base-font-family: 'Bellefair', serif;
 
 @import "../modules/all";
 
-html, body {
-  overflow-x: hidden;
-  width: 100%;
+body,
+html {
+    width: 100vw;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 $line-colours: (bakerloo: $bakerloo-colour,
